<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:background="@color/background_blue_day"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/my_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="?attr/mainBackgroundImage"
            tools:srcCompat="@drawable/background_portrait_day"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="149dp"
            android:layout_height="132dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clear_day" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/update_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <View
                    android:id="@+id/overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#400000AA"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/latitudeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/latitude_label"
                    android:textColor="?attr/android:textColor"
                    app:layout_constraintEnd_toStartOf="@+id/longitudeLabel"
                    app:layout_constraintHorizontal_bias="0.417"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/longitudeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="60dp"
                    android:text="@string/longitude_label"
                    android:textColor="?attr/android:textColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/latitudeInput"
                    android:layout_width="97dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="numberDecimal|numberSigned"
                    android:text="38.7167"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeLabel" />

                <EditText
                    android:id="@+id/longitudeInput"
                    android:layout_width="97dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="numberDecimal|numberSigned"
                    android:text="-9.1333"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.659"
                    app:layout_constraintStart_toEndOf="@+id/latitudeInput"
                    app:layout_constraintTop_toBottomOf="@+id/longitudeLabel" />

                <TextView
                    android:id="@+id/temperatureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/temperature_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />

                <TextView
                    android:id="@+id/pressureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/pressure_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

                <TextView
                    android:id="@+id/windDirLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wind_direction_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressureLabel" />

                <TextView
                    android:id="@+id/windSpeedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wind_speed_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/windDirLabel" />

                <TextView
                    android:id="@+id/timeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/time_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperatureLabel" />

                <TextView
                    android:id="@+id/pressureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="88dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/wind_direction_label"
                    app:layout_constraintStart_toEndOf="@+id/pressureLabel"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

                <TextView
                    android:id="@+id/windDirValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="124dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wind_direction_label"
                    app:layout_constraintStart_toEndOf="@+id/windDirLabel"
                    app:layout_constraintTop_toBottomOf="@+id/pressureValue" />

                <TextView
                    android:id="@+id/windSpeedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="148dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wind_direction_label"
                    app:layout_constraintStart_toEndOf="@+id/windSpeedLabel"
                    app:layout_constraintTop_toBottomOf="@+id/windDirValue" />

                <TextView
                    android:id="@+id/temperatureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="141dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wind_direction_label"
                    app:layout_constraintStart_toEndOf="@+id/temperatureLabel"
                    app:layout_constraintTop_toBottomOf="@+id/windSpeedValue" />

                <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="202dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wind_direction_label"
                    app:layout_constraintStart_toEndOf="@+id/timeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/temperatureValue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>